tests/snapshots/golden__check_matches_its_golden.snap
---
source: tests/golden.rs
expression: report
---
--- check exit 0 ---
allowed perm=execute exe=/usr/sbin/runuser path=/tmp/live/probe-grep rule=13 (1 denials)  00-cand.rules: allow perm=execute all : path=/tmp/live/probe-grep
denied  perm=open exe=/usr/bin/cat path=/tmp/live/probe-lib.so rule=8 (1 denials)  no candidate before rule=8 matches; deny_audit perm=open all : ftype=application/x-sharedlib denies it again
denied  perm=execute exe=/usr/sbin/runuser path=/usr/lib64/ld-linux-x86-64.so.2 rule=5 (1 denials)  no candidate before rule=5 matches; deny_audit perm=any pattern=ld_so : all denies it again
denied  perm=open exe=/usr/sbin/runuser path=/usr/lib64/ld-linux-x86-64.so.2 rule=5 (1 denials)  no candidate before rule=5 matches; deny_audit perm=any pattern=ld_so : all denies it again
unknown perm=open exe=/usr/sbin/runuser path=/usr/bin/grep rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/etc/ld.so.cache rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib64/libpcre.so.1.2.12 rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib64/libsigsegv.so.2.0.6 rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib64/libc.so.6 rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/share/locale/locale.alias rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_IDENTIFICATION rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib64/gconv/gconv-modules.cache rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_MEASUREMENT rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_TELEPHONE rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_ADDRESS rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_NAME rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_PAPER rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_MESSAGES/SYS_LC_MESSAGES rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_MONETARY rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_COLLATE rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_TIME rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/en_US.utf8/LC_NUMERIC rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/usr/lib/locale/C.utf8/LC_CTYPE rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
unknown perm=open exe=/usr/sbin/runuser path=/etc/hostname rule=5 (1 denials)  exe= is stale (§6): a rule for this record has to name /usr/lib64/ld-linux-x86-64.so.2, not the logged exe=, and no candidate can be matched against a value the log does not carry
--- stderr ---
