tests/snapshots/golden__fixtures_match_their_goldens@handwritten-minimal-format.log.snap
---
source: tests/golden.rs
expression: report
input_file: tests/fixtures/handwritten-minimal-format.log
---
--- rules exit 0 ---
# rulesteward: line 5: cannot scope a rule without a real perm=; the record carries no perm=open or perm=execute, and a rule without it would allow every access to the path (x2)
--- trust exit 0 ---
# rulesteward: line 5: cannot scope a rule without a real perm=; the record carries no perm=open or perm=execute, and a rule without it would allow every access to the path (x2)
--- stderr ---
