tests/snapshots/golden__fixtures_match_their_goldens@handwritten-not-denials.log.snap
---
source: tests/golden.rs
expression: report
input_file: tests/fixtures/handwritten-not-denials.log
---
--- rules exit 0 ---
--- trust exit 0 ---
--- why exit 0 ---
--- stderr ---
