tests/snapshots/golden__fixtures_match_their_goldens@rocky8-audit-live-vm-syscall-default.log.snap
---
source: tests/golden.rs
expression: report
input_file: tests/fixtures/rocky8-audit-live-vm-syscall-default.log
---
--- rules exit 0 ---
# rulesteward: 12 FANOTIFY record(s) carry no rule number (fan_info=0): fapolicyd 1.3.2 on Rocky 8 does not write one; why has nothing to count
# rulesteward: 1 audit event(s) carry no PATH record for the object, so nothing to act on: load an exit rule with `auditctl -a always,exit -F arch=b64 -S creat,open,openat,open_by_handle_at,truncate,ftruncate -F exit=-EPERM` or use the journal route
# rulesteward: line 11: trust attribute unavailable (trust=2); emitting nothing, because the file's trust state is unknown rather than untrusted (x10)
# rulesteward: line 26: record carries no path=; nothing to act on (this is a syslog_format configuration, not a malformed record) (x2)
--- trust exit 0 ---
# rulesteward: 12 FANOTIFY record(s) carry no rule number (fan_info=0): fapolicyd 1.3.2 on Rocky 8 does not write one; why has nothing to count
# rulesteward: 1 audit event(s) carry no PATH record for the object, so nothing to act on: load an exit rule with `auditctl -a always,exit -F arch=b64 -S creat,open,openat,open_by_handle_at,truncate,ftruncate -F exit=-EPERM` or use the journal route
# rulesteward: line 11: trust attribute unavailable (trust=2); emitting nothing, because the file's trust state is unknown rather than untrusted (x10)
# rulesteward: line 26: record carries no path=; nothing to act on (this is a syslog_format configuration, not a malformed record) (x2)
--- why exit 0 ---
# rulesteward: 12 FANOTIFY record(s) carry no rule number (fan_info=0): fapolicyd 1.3.2 on Rocky 8 does not write one; why has nothing to count
# rulesteward: 1 audit event(s) carry no PATH record for the object, so nothing to act on: load an exit rule with `auditctl -a always,exit -F arch=b64 -S creat,open,openat,open_by_handle_at,truncate,ftruncate -F exit=-EPERM` or use the journal route
--- stderr ---
