tests/snapshots/golden__fixtures_match_their_goldens@rocky8-base-edge-paths.log.snap
---
source: tests/golden.rs
expression: report
input_file: tests/fixtures/rocky8-base-edge-paths.log
---
--- rules exit 0 ---
# rulesteward: line 14: path contains a control byte (0x09), which cannot be written as a fapolicyd.trust record; emitting nothing
# rulesteward: line 17: path contains a control byte (0x0a), which cannot be written as a fapolicyd.trust record; emitting nothing
# rulesteward: line 22: record truncated at the 511-byte cap; emitting nothing, because path= is a prefix of the real path (x2)
# rulesteward: line 23: path= is ?? — the daemon could not encode the real path, so there is nothing to add to the trust database
# rulesteward: 11 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input
--- trust exit 0 ---
# rulesteward: line 14: path contains a control byte (0x09), which cannot be written as a fapolicyd.trust record; emitting nothing
# rulesteward: line 17: path contains a control byte (0x0a), which cannot be written as a fapolicyd.trust record; emitting nothing
# rulesteward: line 22: record truncated at the 511-byte cap; emitting nothing, because path= is a prefix of the real path (x2)
# rulesteward: line 23: path= is ?? — the daemon could not encode the real path, so there is nothing to add to the trust database
fapolicyd-cli --file add '/tmp/edge/plain'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/with space'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/a : b'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/eq=sign'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/colon:name'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/back\slash'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/uni-café-日本'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/quote'\''single'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/quote"double'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/#hash'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/edge/percent%20enc'
fapolicyd-cli --update
--- why exit 0 ---
# rulesteward: 11 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input
rule=13  14 denials
--- stderr ---
