tests/snapshots/golden__fixtures_match_their_goldens@rocky8-base-gaps.log.snap
---
source: tests/golden.rs
expression: report
input_file: tests/fixtures/rocky8-base-gaps.log
---
--- rules exit 0 ---
# rulesteward: 3 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input
--- trust exit 0 ---
fapolicyd-cli --file add '/tmp/gaps/spaced bash'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/gaps/target'
fapolicyd-cli --update
fapolicyd-cli --file add '/tmp/gaps/deleted'
fapolicyd-cli --update
--- stderr ---
